@@ -1,3 +1,7 @@
+## x.x.x / 2018-xx-xx
+
+* [BUGFIX] (UI/Brigade) Fix sort of jobs and builds on the pages.
+
 ## 0.4.1 / 2018-06-07
 
 * [ENHANCEMENT] (UI) Autoreload pages.
